GDB-14118 fix agent dropdown menu overflow
## What
Fix overflow issue in the agent dropdown menu

## Why
Part of the menu was being cut off on smaller screens

## How
Updated the CSS for `.agent-actions-menu` to set a fixed `width` and adjusted styles for responsive design.

## Testing
n/a

(cherry picked from commit 67c305fbf4b77cf82ccaa23c5b360c2dda638586)

--- a/packages/legacy-workbench/src/css/ttyg/agent-list.css
+++ b/packages/legacy-workbench/src/css/ttyg/agent-list.css
@@ -94,6 +94,15 @@
 
 .agent-list-component .agent-item .btn-group .agent-actions-menu {
     margin-top: 4px;
+    width: 12rem;
+    right: 0;
+}
+
+@media (max-width: 1220px) {
+    .agent-list-component .agent-item .btn-group .agent-actions-menu {
+        width: 10rem;
+        font-size: 0.8rem;
+    }
 }
 
 .agent-list-component .agent-item .btn-group .dropdown-item span {
